<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="213dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/coronavirus_main" />

        <TextView
            android:id="@+id/text_view_user_name"
            android:layout_width="294dp"
            android:layout_height="36dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:textAlignment="center"
            android:textSize="@dimen/user_main_data"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/text_view_user_age"
            android:layout_width="294dp"
            android:layout_height="36dp"
            android:layout_marginStart="59dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="58dp"
            android:textAlignment="center"
            android:textSize="@dimen/user_main_data"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_user_name" />

        <EditText
            android:id="@+id/user_name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="48dp"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:textSize="@dimen/user_main_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/user_age_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:ems="10"
            android:hint="@string/age_hint"
            android:inputType="number"
            android:textSize="@dimen/user_main_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_edit" />

        <ImageButton
            android:id="@+id/info_main_button"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginTop="236dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.895"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_dialog_info" />

        <Button
            android:id="@+id/button_go_virus"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginBottom="132dp"
            android:padding="10dp"
            android:text="@string/button_virus_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_go_sintomas"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/button_sintomas_text"
            app:layout_constraintBottom_toBottomOf="@+id/button_go_indicaciones"
            app:layout_constraintEnd_toStartOf="@+id/button_go_virus" />

        <Button
            android:id="@+id/button_go_indicaciones"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:padding="10dp"
            android:text="@string/button_indicaciones_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_go_virus" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
